--- a/TaskingSystem/TaskingSystem.csproj
+++ b/TaskingSystem/TaskingSystem.csproj
@@ -18,4 +18,16 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+    <Folder Include="wwwroot\AssignmentFiles\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\AssignedTasks\_IndexForm.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
